--- a/web/WEB-INF/template/encabezado.xhtml
+++ b/web/WEB-INF/template/encabezado.xhtml
@@ -22,7 +22,7 @@ and open the template in the editor.
             <span class="logo-lg">Genesis Gourmet</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top" style="position: fixed;">
+        <nav class="navbar navbar-static-top">
             <!-- Sidebar toggle button-->
             <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                 <span class="sr-only">Toggle navigation</span>
