--- a/web/resources/css/AdminLTE.css
+++ b/web/resources/css/AdminLTE.css
@@ -96,6 +96,13 @@ body {
   min-height: 100%;
   background-color: #ecf0f5;
   z-index: 800;
+    background-image:url('#{resource["imgs/fondoGenesis.jpg"]}');
+   background-attachment: fixed;
+    -webkit-background-size: 100%; 
+    background-size: 100%;
+    min-width: 300px;
+    /*margin: 0 auto;*/
+    height: auto;
 }
 .main-footer {
   background: #fff;
@@ -151,6 +158,7 @@ body {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+
 }
 /* H1 - H6 font */
 h1,
