--- a/web/WEB-INF/template/template.xhtml
+++ b/web/WEB-INF/template/template.xhtml
@@ -10,8 +10,8 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <h:head>
-        <title>Genesis #{sessioncontroller.rolseleccionado}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+        <title>Genesis #{sessionController.usuario.primerNombre}</title>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
         <h:outputStylesheet library="css" name="bootstrap.min.css" />
         <h:outputStylesheet library="css" name="AdminLTE.min.css" />
         <h:outputStylesheet library="css" name="AdminLTE.css" />
